fix: add overflow ellipsis class

--- a/src/shared/spacing/styles.css
+++ b/src/shared/spacing/styles.css
@@ -9,3 +9,9 @@
     overflow-wrap: normal;
     white-space: nowrap;
 }
+
+.dataloom-overflow--ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
